--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,7 +32,7 @@
   border-radius: 0;
 }
 
-.nav-link.btn.btn-primary:hover, #search-form button:hover{
+.nav-link.btn.btn-primary:hover, #search-form button:hover, .list-group-item a:hover{
   background-color: #fff;
   color: #f03e3e;
   border-color: #f03e3e;
@@ -80,3 +80,72 @@
   background-color: #f03e3e;
   border: 1px solid transparent;
 }
+
+#jobs-container{
+  padding: 0 100px;
+  padding-bottom: 50px;
+}
+
+#job-list .list-group-item{
+  margin-bottom: 8px;
+  border: 1px solid #ccc;
+  padding: 15px 70px;
+  color: #212529;
+  height: 120px;
+}
+
+#job-list .list-group-item p {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+#job-list .list-group-item.new-job{
+  border: none;
+  background-color: #FFF7cc;
+}
+
+#job-list-title{
+  margin-bottom: 35px;
+}
+
+.list-group-item img{
+  width: 80px;
+  border: 1px solid #212529;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  left: -40px;
+  top: calc(50% - 40px);
+}
+
+.list-group-item a{
+  position: absolute;
+  right: 20px;
+  top: 35px;
+  height: 50px;
+  line-height: 35px;
+  background-color: #f03e3e;
+  border: 1px solid transparent;
+  border-radius: 0;
+  color: #fff;
+}
+
+.new-job-label{
+  background-color: #ffd500;
+  color: #4d5154;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 5px 10px;
+  position: absolute;
+  right: 250px;
+  top: 40px;
+  display: none;
+}
+
+.new-job .new-job-label{
+  display: block;
+}
+
+
+
+
