--- a/public/css/add.css
+++ b/public/css/add.css
@@ -92,3 +92,23 @@ background-color: #fff;
   color: #f03e3e;
   border-color: #f03e3e;
 }
+
+@media (max-width: 481px) {
+  #navbarNav {
+    text-align: center;
+  }
+
+  #form-box {
+    padding: 25px;
+  }
+
+  #form-box h2 {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  #form-box button {
+    width: 100%;
+  }
+
+}
