--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,6 +146,48 @@
   display: block;
 }
 
+@media (max-width: 481px) {
+  #navbarNav {
+    text-align: center;
+  }
 
+  #top-container {
+    padding: 50px;
+    padding-top: 100px;
+  }
 
+  #main-title {
+    font-size: 2.2rem;
+  }
 
+  #main-subtitle {
+    font-size: 1.5rem;
+  }
+
+  #search-form {
+    padding: 0;
+  }
+
+  #jobs-container {
+    padding: 20px;
+  }
+
+  .list-group-item {
+    padding: 15px 85px;
+  }
+
+  .list-group-item h2 {
+    font-size: 1.2rem;
+    width: 80%;
+  }
+
+  .list-group-item img {
+    width: 50px;
+    left: 15px;
+    top: calc(50% - 25px);
+  }
+
+  .new-job .new-job-label {
+    display: none;
+  }
+}
