--- a/public/css/view.css
+++ b/public/css/view.css
@@ -82,3 +82,21 @@
   color: #FFF;
   text-decoration: none;
 }
+
+@media (max-width: 481px) {
+  #navbarNav {
+    text-align: center;
+  }
+
+  .back-link {
+    margin-left: 30px;
+  }
+
+  #job-view-container p {
+    font-size: 1.3rem;
+  }
+
+  .job-desc {
+    width: 80%;
+  }
+}
